small adjustments in plugin pop up

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -22,12 +22,14 @@
                         </p>
                     </header>
                     <p>{{comment}}</p>
+
+                    <p><strong>CONTROL PORTS:</strong></p>
                     <table class="plugin-specs table table-bordered">
                     <tr>
-                        <th>control</th>
-                        <th>default</th>
-                        <th>min</th>
-                        <th>max</th>
+                        <th>Control</th>
+                        <th>Default</th>
+                        <th>Min</th>
+                        <th>Max</th>
                     </tr>
                     {{#ports.control.input}}
                     <tr>
