improved loading animation for pedalboards

--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -98,8 +98,10 @@
       overflow: hidden;
     }
     .pedalboard .img img {
+      background: url(../img/loading-pedalboard.gif) center center no-repeat;
       cursor: pointer;
       height: auto;
+      height: 100%;
       width: 100%;
     }
     .pedalboard .title {
