--- a/html/include/pedalboard.html
+++ b/html/include/pedalboard.html
@@ -7,7 +7,7 @@
         <span class="actions">
             <span class="js-load open">Open</span>
             <!--<span class="js-duplicate duplicate hidden">Duplicate</span>-->
-            <!--<span class="js-remove delete" style="float:right">Delete</span>-->
+            <span class="js-remove delete" style="float:right">Delete</span>
         </span>
     </div>
 </div>
