--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7312,7 +7312,7 @@ hr.dotted {
   right: 0;
   width: 36px;
   background-color: #000;
-  background-image: url(../img/icons/pinned.png);
+  background-image: url(../img/icons/white/pinned.png);
   background-position: center center;
   background-repeat: no-repeat;
 }
@@ -7327,7 +7327,7 @@ hr.dotted {
   width: 36px;
 }
 #plugins-library.auto .fold {
-  background-image: url(../img/icons/autohide.png);
+  background-image: url(../img/icons/white/autohide.png);
 }
 #plugins-library .settings {
   background-color: black;
@@ -7344,24 +7344,17 @@ hr.dotted {
 }
 #plugins-library #plugins-library-settings-window {
   background: #000;
-  bottom: 166px;
+  bottom: 130px;
   color: #fff;
   position: absolute;
-  right: 37px;
-  padding: 5px 0;
-  border-radius: 5px;
-  border-bottom-right-radius: 0;
-}
-#plugins-library #plugins-library-settings-window h1 {
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 1;
-  margin: 0 0 10px;
+  right: 74px;
   padding: 0;
-  text-transform: uppercase;
 }
 #plugins-library #plugins-library-settings-window form {
   margin-bottom: 0;
+  padding: 4px;
+  border: 0;
+  margin: 0;
 }
 #plugins-library #plugins-library-settings-window label {
   margin-right: 10px;
@@ -7371,6 +7364,23 @@ hr.dotted {
 }
 #plugins-library #plugins-library-settings-window .control-group {
   position: relative;
+}
+#plugins-library #plugins-library-settings-window input {
+  width: 120px;
+  height: 28px;
+  line-height: 28px;
+  padding: 0 6px;
+  outline: 0;
+  border: 0;
+}
+#plugins-library #plugins-library-settings-window .input-clean {
+    position: absolute;
+    top: 50%;
+    right: 8px;
+    bottom: auto;
+    left: auto;
+    transform: translateY(-50%);
+    margin: 0 !important;
 }
 #plugins-library ul {
   list-style: none;
