First couple of speedups on initialization; move latest changes in CSS to this 'less'

--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -54,7 +54,8 @@ header {
   background-repeat: no-repeat;
   display: block;
   left: 0;
-  padding: 10px 10px 18px 10px;
+  height: 35px;
+  line-height: 35px;
   position: fixed;
   right: 0;
   top: 0;
@@ -68,6 +69,7 @@ header {
     color: #fff;
     display: inline-block;
     font-size: 24px;
+    line-height: 35px;
     margin: 0 0 18px 0;
     padding: 0;
   }
