--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -11,6 +11,7 @@
     color: #fff;
     display: inline-block;
     font-size: 24px;
+    line-height: 35px;
     margin: 0 0 18px 0;
     padding: 0;
   }
@@ -20,7 +21,8 @@
     background-repeat: no-repeat;
     display: block;
     left: 0;
-    padding: 10px 10px 18px 10px;
+    height: 35px;
+    line-height: 35px;
     position: fixed;
     right: 0;
     top: 0;
