--- a/html/css/less/nprogress.less
+++ b/html/css/less/nprogress.less
@@ -6,11 +6,11 @@
 }
 
 #nprogress .bar {
-  background: @brand-primary;
+  background: @brand-warning;
 
   position: fixed;
   z-index: 103100;
-  top: 0;
+  top: 35px;
   left: 0;
 
   width: 100%;
@@ -19,17 +19,7 @@
 
 /* Fancy blur effect */
 #nprogress .peg {
-  display: block;
-  position: absolute;
-  right: 0px;
-  width: 100px;
-  height: 100%;
-  box-shadow: 0 0 10px @brand-primary, 0 0 5px @brand-primary;
-  opacity: 1.0;
-
-  -webkit-transform: rotate(3deg) translate(0px, -4px);
-      -ms-transform: rotate(3deg) translate(0px, -4px);
-          transform: rotate(3deg) translate(0px, -4px);
+  display: none;
 }
 
 /* Remove these to get rid of the spinner */
@@ -37,18 +27,24 @@
   display: block;
   position: fixed;
   z-index: 1031;
-  top: 10px;
-  left: 15px;
+  top: 38px;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 6px;
+  box-sizing: border-box;
+  transform: translate(-50% -50%);
 }
 
 #nprogress .spinner-icon {
-  width: 30px;
-  height: 30px;
+  width: 32px;
+  height: 32px;
   box-sizing: border-box;
 
-  border: solid 6px transparent;
-  border-top-color: @brand-primary;
-  border-left-color: @brand-primary;
+  border: solid 3px transparent;
+  border-top-color: rgba(242, 148, 70, 1);
+  border-left-color: rgba(242, 148, 70, .66);
+  border-bottom-color: rgba(242, 148, 70, .33);
+
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
