--- a/html/css/less/variables.less
+++ b/html/css/less/variables.less
@@ -10,10 +10,10 @@
 @gray-light:             lighten(#000, 60%);   // #999
 @gray-lighter:           lighten(#000, 93.5%); // #eee
 
-@brand-primary:         #40C25D;
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
-@brand-warning:         #C67D0F;
+@brand-primary:         #883996;
+@brand-success:         #883996;
+@brand-info:            #883996;
+@brand-warning:         #F29446;
 @brand-danger:          #d9534f;
 
 
