added warning to add pedalboards to empty bank

--- a/html/css/less/variables.less
+++ b/html/css/less/variables.less
@@ -474,8 +474,8 @@
 @state-info-bg:                  #A6ECB1;
 @state-info-border:              darken(spin(@state-info-bg, -10), 7%);
 
-@state-warning-text:             #8a6d3b;
-@state-warning-bg:               #35BBD1;
+@state-warning-text:             #fff;
+@state-warning-bg:               #F29446;
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
 
 @state-danger-text:              #a94442;
