--- a/html/css/less/nprogress.less
+++ b/html/css/less/nprogress.less
@@ -6,15 +6,15 @@
 }
 
 #nprogress .bar {
-  background: @brand-warning;
+  background: @brand-primary;
 
   position: fixed;
   z-index: 103100;
-  top: 35px;
+  top: 45px;
   left: 0;
-
+  opacity: 0.5;
   width: 100%;
-  height: 3px;
+  height: 2px;
 }
 
 /* Fancy blur effect */
@@ -24,10 +24,10 @@
 
 /* Remove these to get rid of the spinner */
 #nprogress .spinner {
-  display: block;
+  display: none;
   position: fixed;
   z-index: 1031;
-  top: 38px;
+  top: 45px;
   right: 0;
   background: rgba(0, 0, 0, 0.5);
   padding: 6px;
